feat: implementing jwt auth, added login handler
todo:
1) logger middleware
